--- a/src/main/resources/VAADIN/themes/chameleon/common.css
+++ b/src/main/resources/VAADIN/themes/chameleon/common.css
@@ -3,15 +3,16 @@
 /*******************************************************************************
  * App background & tooltip
  ******************************************************************************/
+
 .v-app {
 	background: transparent;
 	overflow: hidden;
-}
+	}
 
 .v-view {
 	margin-top: 0;
 	border-top: none;
-}
+	}
 
 .v-tooltip {
 	background: #fdfdee;
@@ -22,14 +23,16 @@
 	line-height: normal;
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
-}
+	}
 
-.v-sa .v-tooltip,.v-ff3 .v-tooltip {
-	outline: 1px solid rgba(0, 0, 0, .2);
+.v-sa .v-tooltip,
+.v-ff3 .v-tooltip {
+	outline: 1px solid rgba(0,0,0,.2);
 	-webkit-border-radius: 0;
 	-moz-border-radius: 0;
 	border: none;
-}
+	}
+
 
 /*******************************************************************************
  * Global fonts
@@ -40,62 +43,103 @@
  */
 /* Then come all other overlay elements, that do not have other arbitrary 
  * components inside them (from v-filterselect-suggestpopup onwards) */
-.v-app,.v-window,.v-popupview-popup,.v-tooltip,.v-app input,.v-app select,.v-app button,.v-app textarea,.v-window input,.v-window select,.v-window button,.v-window textarea,.v-popupview-popup input,.v-popupview-popup select,.v-popupview-popup button,.v-popupview-popup textarea,.v-filterselect-suggestpopup,.v-datefield-popup,.v-contextmenu,.v-Notification,.v-menubar-submenu,.v-table-header-drag,.v-menubar-submenu,.v-drag-element
-	{
-	font-family: Arial, Helvetica, "Lucida Grande", "Lucida Sans Unicode",
-		Tahoma, Verdana, sans-serif;
+.v-app,
+.v-window,
+.v-popupview-popup,
+.v-tooltip,
+.v-app input,
+.v-app select,
+.v-app button,
+.v-app textarea,
+.v-window input,
+.v-window select,
+.v-window button,
+.v-window textarea,
+.v-popupview-popup input,
+.v-popupview-popup select,
+.v-popupview-popup button,
+.v-popupview-popup textarea,
+.v-filterselect-suggestpopup,
+.v-datefield-popup,
+.v-contextmenu,
+.v-Notification,
+.v-menubar-submenu,
+.v-table-header-drag,
+.v-menubar-submenu,
+.v-drag-element {
+	font-family: Arial, Helvetica, "Lucida Grande", "Lucida Sans Unicode", Tahoma, Verdana, sans-serif;
 	font-size: 13px;
 	line-height: 1.4;
 	color: #222;
-}
+	}
+
+
 
 /*******************************************************************************
  * Generic overlay elements
  ******************************************************************************/
-.v-window,.v-popupview-popup,.v-filterselect-suggestpopup,.v-datefield-popup,.v-contextmenu,.v-Notification,.v-menubar-submenu
-	{
+.v-window,
+.v-popupview-popup,
+.v-filterselect-suggestpopup,
+.v-datefield-popup,
+.v-contextmenu,
+.v-Notification,
+.v-menubar-submenu {
 	background: #fff url(img/grad-light-top.png) repeat-x;
-	background-color: rgba(255, 255, 255, .85);
+	background-color: rgba(255,255,255,.85);
 	border: 1px solid #adadad;
-	border-color: rgba(0, 0, 0, .4);
+	border-color: rgba(0,0,0,.4);
 	border-radius: 4px;
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
 	overflow: hidden;
-}
+	}
 
-.v-ie6 .v-window,.v-ie6 .v-popupview-popup,.v-ie6 .v-filterselect-suggestpopup,.v-ie6 .v-datefield-popup,.v-ie6 .v-contextmenu,.v-ie6 .v-Notification,.v-ie6 .v-menubar-submenu
-	{
+.v-ie6 .v-window,
+.v-ie6 .v-popupview-popup,
+.v-ie6 .v-filterselect-suggestpopup,
+.v-ie6 .v-datefield-popup,
+.v-ie6 .v-contextmenu,
+.v-ie6 .v-Notification,
+.v-ie6 .v-menubar-submenu {
 	background-image: none;
-}
+	}
 
-.v-filterselect-suggestpopup,.v-contextmenu,.v-menubar-submenu {
+.v-filterselect-suggestpopup,
+.v-contextmenu,
+.v-menubar-submenu {
 	padding: 3px 0;
-}
+	}
 
-.v-contextmenu .gwt-MenuItem,.v-filterselect-suggestpopup .gwt-MenuItem,.v-menubar-submenu .v-menubar-menuitem
-	{
+.v-contextmenu .gwt-MenuItem,
+.v-filterselect-suggestpopup .gwt-MenuItem,
+.v-menubar-submenu .v-menubar-menuitem {
 	padding: .05em .7em;
 	user-select: none;
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
 	cursor: default;
-}
+	}
 
-.v-contextmenu td.gwt-MenuItem-selected div,.v-filterselect-suggestpopup td.gwt-MenuItem-selected,.v-table .v-table-body .v-selected,.v-menubar-submenu span.v-menubar-menuitem-selected
-	{
+.v-contextmenu td.gwt-MenuItem-selected div,
+.v-filterselect-suggestpopup td.gwt-MenuItem-selected,
+.v-table .v-table-body .v-selected,
+.v-menubar-submenu span.v-menubar-menuitem-selected {
 	text-shadow: none;
-}
+	}
 
-.v-contextmenu .gwt-MenuItem-selected,.v-filterselect-suggestpopup .gwt-MenuItem-selected,.v-table .v-selected,.v-menubar-submenu .v-menubar-menuitem-selected
-	{
+.v-contextmenu .gwt-MenuItem-selected,
+.v-filterselect-suggestpopup .gwt-MenuItem-selected,
+.v-table .v-selected,
+.v-menubar-submenu .v-menubar-menuitem-selected {
 	background-color: #333;
-}
+	}
 
 .v-contextmenu .gwt-MenuItem-selected div {
 	background: transparent;
-}
+	}
+
 
 /*******************************************************************************
  * Misc. generics
@@ -104,39 +148,18 @@
 	width: 13px;
 	height: 1.4em;
 	background: transparent url(img/error-indicator.png) no-repeat right 50%;
-}
+	}
 
 .v-caption-small .v-errorindicator {
 	height: 1.2em;
-}
+	}
 
 .v-caption-big .v-errorindicator {
 	height: 1.8em;
-}
+	}
 
 .v-tooltip .v-errormessage {
 	color: #b2320b;
 	padding-left: 14px;
 	background: transparent url(img/error-indicator.png) no-repeat 0 50%;
-}
-
-.v-gridlayout-fakeheader {
-	background: #e0e0e0;
-	border-color: #C2C3C4;
-	border-style: solid;
-	border-width: 1px;
-}
-
-.v-gridlayout-fakeheader .v-label {
-	padding-left: 6px;
-	padding-right: 6px;
-}
-
-.v-gridlayout-fakeheader>div>div>div {
-	border-color: #C2C3C4;
-	border-width: 1px;
-	border-style: none solid none none;
-	border-collapse: separate;
-	border-spacing: 0;
-	text-shadow: 0 1px 0 #F3F5F8;
-}
+	}
